Use `ThreadLocal` in preference to `ScopedValue` to keep code more "usable by default" until `ScopedValue` is out of preview